// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> accepts a center prop 1`] = `
.dMsszQ {
  font-size: unset;
  margin: unset;
  text-align: center;
}

<div
  className="sc-bdVaJa dMsszQ"
  size="unset"
/>
`;

exports[`<Box /> accepts a margin prop 1`] = `
.knubHR {
  font-size: unset;
  margin: 0;
  text-align: left;
}

<div
  className="sc-bdVaJa knubHR"
  size="unset"
/>
`;

exports[`<Box /> accepts a size prop 1`] = `
.AZKcL {
  font-size: 12px;
  margin: unset;
  text-align: left;
}

<div
  className="sc-bdVaJa AZKcL"
  size="12px"
/>
`;

exports[`<Box /> renders correctly 1`] = `
.QsaMi {
  font-size: unset;
  margin: unset;
  text-align: left;
}

<div
  className="sc-bdVaJa QsaMi"
  size="unset"
/>
`;
